# warehouse_robot_simulation

./: .gitignore  CMakeLists.txt  README.md  Udacity_README.md  package.xml
configs/: dispatches  storages
launch/: amcl.launch  gazebo_object_controller.launch  robot_description.launch  robot_spawner.launch  rviz_robot_check.launch  slam_gmapping.launch  spawn.launch  view_navigation.launch  warehouse_simulation.launch  world.launch
maps/: warehouse.pgm
models/: coke_can.sdf  dispatchA.sdf  productA.sdf  productB.sdf  storageA.sdf
models/box/: model.config  model.sdf
models/urdf/: delivery_robot copy.xacro  delivery_robot.gazebo  delivery_robot.xacro
models/warehouse/warehouse/: model.config  model.sdf
models/warehouseObjects/: Dispatch.sdf  ProductB.sdf  ProductG.sdf  ProductR.sdf  StorageB.sdf  StorageG.sdf  StorageR.sdf
navigation/params/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rvizConfig/: navigation.rviz  robot_check.rviz
scripts/: add_markers.sh  home_service.sh  mapping_slam.sh  pick_objects.sh  test_amcl.sh  test_slam.sh  warehouse_simulation.sh
src/: Dispatch.cpp  Dispatch.h  GazeboSpawnObject copy.cpp  GazeboSpawnObject.cpp  Model.cpp  Model.h  ModelController.cpp  ModelController.h  Order.cpp  Order.h  OrderController.cpp  OrderController.h  Product.cpp  Product.h  Robot.cpp  Robot.h  Storage.cpp  Storage.h  WarehouseController.h  WarehouseObject.cpp  WarehouseObject.h  WarehouseSimulation.cpp  a.cpp
worlds/: warehouse.world
